@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#2774] Fix: Cannot cancel an unregistration
 - [#2872] Change: In the notification mails for the organizers set unlimited string for vacancies if event has unlimited vacancies
 - [#2622] Fix: Error when trying to create price with access using IRRE
 - [#2812] Feature: Add a CSS class for vancancies on registration queue
